fix home slider to allow for top bottom background settings. update css spacing as needed

--- a/tmpl_pason/less/styles.less
+++ b/tmpl_pason/less/styles.less
@@ -110,7 +110,7 @@ header {
     height: 40px;
   }
   .next-toggle, .previous-toggle {
-    top: 30%;
+    top: 44%;
   }
   .next-toggle {
     left: auto;
@@ -121,7 +121,7 @@ header {
   }
   // put carousel indicators on bottom left
   .carousel-indicators {
-    left: 0px;
+    left: 5px;
     bottom: 0px;
     margin-left: 0px;
     text-align: left;
